# Education

Java/: Main.java
algoritm/fuzzy-product-duplicate-finder/: README.md  duplicates.json  exam.py  rand.py
python/HW1/: Task1.py
python/HW10/: api_db.py  api_user.py  base.py  docker-compose.yml  main.py  models.py  service.py
python/HW11/: .gitignore  Readme.txt  api_db.py  api_user.py  base.py  main.py  models.py  service.py  students.csv
python/HW11/auth/: auth_api.py  auth_model.py  auth_refresh_repository.py  auth_schema.py  auth_service.py  depend.py  user_service.py
python/HW11/redis_m/: residconnect.py
python/HW12/: api_db.py  base.py  config.py  docker-compose.yml  main.py  models.py
python/HW12/auth/: auth_api.py  auth_model.py  auth_refresh_repository.py  auth_repository.py  auth_schema.py  auth_service.py  depend.py  (+2 more)
python/HW2/: input.txt  main.py
python/HW3/: main.py
python/HW4/: HW4.py
python/HW5/: HW5_task1.py  HW5_task2.py
python/HW6/: main.py
python/HW7/: Task1.py  Task2.py  Task3.py
python/HW8/: main.py
python/HW9/: Main.py  docker-compose.yml
python/jopa/auth_pro/: alembic.ini  docker-compose.yml  pyproject.toml
python/jopa/auth_pro/alembic/: env.py
python/jopa/auth_pro/alembic/versions/: c638c84cd60e_init.py
python/jopa/auth_pro/src/: exception.py  main.py
python/jopa/auth_pro/src/app/: .env  config.py
python/jopa/auth_pro/src/app/auth/: dao.py  models.py  router.py  schemas.py  utils.py
python/jopa/auth_pro/src/app/dao/: base.py  database.py
python/jopa/auth_pro/src/app/dependencies/: auth_dep.py  dao_dep.py
(+4 files in other folders)
