[project]
name = "auth-pro"
version = "0.1.0"
description = ""
authors = [
    {name = "Sudovtsev.M",email = "mishanya.oo@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[all] (>=0.122.0,<0.123.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "auth_pro", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
